[tool.poetry]
name = "nicegui-agent"
version = "0.1.0"
description = "Create SocketIO clients and servers in NiceGUI apps."
authors = ["Harshad Sharma <harshad@sharma.io>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "nicegui_agent", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.9"
nicegui = "^1.2.20"
honcho = "^1.1.0"
apscheduler = "^3.10.1"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
